spade-tests/src/snapshots/spade_tests__parser__errors_in_items_are_recoverable.snap
---
source: spade-tests/src/parser.rs
---
entity main() {
    not valid syntax
}

struct X {
    bool
}

enum Y {
    Variant(a)
}


error: Expected a `;` after this expression.
  ┌─ testinput:2:5
  │
2 │     not valid syntax
  │     ^^^ ----- Required because it is followed by this
  │
  = help: Only the last expression to be returned can be without a semicolon

error: Expected a `;` after this expression.
  ┌─ testinput:2:9
  │
2 │     not valid syntax
  │         ^^^^^ ------ Required because it is followed by this
  │
  = help: Only the last expression to be returned can be without a semicolon

error: Unexpected `}`, expected `:`
  ┌─ testinput:7:1
  │
7 │ }
  │ ^ expected `:`

error: Unexpected `(`, expected `{`, `,` or `}`
   ┌─ testinput:10:12
   │
10 │     Variant(a)
   │            ^

error: Use of undeclared name not
  ┌─ testinput:2:5
  │
2 │     not valid syntax
  │     ^^^ Undeclared name

error: Use of undeclared name valid
  ┌─ testinput:2:9
  │
2 │     not valid syntax
  │         ^^^^^ Undeclared name

error: Use of undeclared name syntax
  ┌─ testinput:2:15
  │
2 │     not valid syntax
  │               ^^^^^^ Undeclared name
